force-app/main/default/objects/Application__c.object
<CustomObject>
    <fields>
        <fullName>Submission_Progress__c</fullName>
        <description>Defines the progress of submission that the applicant is going through.</description>
        <label>Submission Progress</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type_of_Study__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Declaration</fullName>
                    <default>true</default>
                    <label>Declaration</label>
                </value>
                <value>
                    <fullName>Personal Details</fullName>
                </value>
                <value>
                    <fullName>Study Preferences</fullName>
                </value>
                <value>
                    <fullName>Credentials</fullName>
                </value>
                <value>
                    <fullName>Scholarship</fullName>
                </value>
                <value>
                    <fullName>Application Details</fullName>
                </value>
                <value>
                    <fullName>Research Program</fullName>
                </value>
                <value>
                    <fullName>English Proficiency</fullName>
                </value>
                <value>
                    <fullName>Qualifications</fullName>
                </value>
                <value>
                    <fullName>Awards, Prizes &amp; Scholarship</fullName>
                </value>
                <value>
                    <fullName>Employment &amp; Research Experience</fullName>
                </value>
                <value>
                    <fullName>Referees</fullName>
                </value>
                <value>
                    <fullName>Publications</fullName>
                </value>
                <value>
                    <fullName>Creative Works</fullName>
                </value>
                <value>
                    <fullName>Music</fullName>
                </value>
                <value>
                    <fullName>Theatre Performance</fullName>
                </value>
                <value>
                    <fullName>Exhibitions</fullName>
                </value>
                <value>
                    <fullName>Additional Supporting Information</fullName>
                </value>
                <value>
                    <fullName>Agent</fullName>
                </value>
                <value>
                    <fullName>Documents</fullName>
                </value>
                <value>
                    <fullName>Review</fullName>
                </value>
                <value>
                    <fullName>Application Fee</fullName>
                </value>
                <value>
                    <fullName>Submit</fullName>
                </value>
                <value>
                    <fullName>Validate &amp; Submit</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Submission_location__c</fullName>
        <label>Submission location</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Submitted_Date_Time__c</fullName>
        <description>Application Submitted Date and Time</description>
        <label>Submitted Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Submitted_Date__c</fullName>
        <label>Submitted Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Task_Disability_Check__c</fullName>
        <label>Task: Disability Check</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Assessment_Flow_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Task_Doc_QA__c</fullName>
        <label>Task: Doc QA</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Assessment_Flow_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Task_Duplicate_Check__c</fullName>
        <label>Task: Duplicate Check</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Assessment_Flow_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Task_Encumbrance_Check__c</fullName>
        <label>Task: Encumbrance Check</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Assessment_Flow_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Task_Fee__c</fullName>
        <description>Application fee check status flow</description>
        <inlineHelpText>Application fee check status flow</inlineHelpText>
        <label>Task: Fee</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Assessment_Flow_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Task_GTE__c</fullName>
        <label>Task: GTE</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Assessment_Flow_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Task_MinEnglish__c</fullName>
        <description>Application status to check status of Minimum English Test</description>
        <inlineHelpText>Application status to check status of Minimum English Test</inlineHelpText>
        <label>Task: Minimum English Check</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Assessment_Flow_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Task_Qualification__c</fullName>
        <label>Task: Qualification</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Assessment_Flow_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Task_Reason_Visa__c</fullName>
        <description>Task Trigger Reason for Visa</description>
        <inlineHelpText>Task Trigger Reason for GTE</inlineHelpText>
        <label>Task Reason: Visa</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Assessment_Task_Reasons</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Task_Visa__c</fullName>
        <description>Track if visa assessment needs to be conducted</description>
        <inlineHelpText>Track if visa assessment needs to be conducted</inlineHelpText>
        <label>Task: Visa</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Assessment_Flow_Status</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Time_Out_Review__c</fullName>
        <description>This holds the Date/Time when the Application review will start checking if there has been no activity on the Qualification or Visa check once one of the Tasks is &apos;Completed&apos; and the other is &apos;Awaiting Documents&apos; OR both Tasks are set to &apos;Awaiting Documents&apos;.</description>
        <label>Task Time Out Review Start</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Timeout_Review_Outcome__c</fullName>
        <description>This field is used to record the outcome of the most recent decision of the Timeout Review Task. This field have history enabled, so you can review who made the most recent decision or see the original decision made.</description>
        <label>Timeout Review Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Proceed to Selection</fullName>
                </value>
                <value>
                    <fullName>Stay in Assessment</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Transaction_Amount__c</fullName>
        <description>Transaction amount received for payment reconciliation</description>
        <inlineHelpText>Transaction amount received for payment reconciliation</inlineHelpText>
        <label>Transaction Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Transaction_Date__c</fullName>
        <description>Date this transaction was received or verified</description>
        <inlineHelpText>Date this transaction was received or verified</inlineHelpText>
        <label>Transaction Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Transaction_Reference__c</fullName>
        <description>Unique transaction reference Id for payment reconciliation</description>
        <externalId>true</externalId>
        <inlineHelpText>Unique transaction reference Id for payment reconciliation</inlineHelpText>
        <label>Transaction Reference</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_Source__c</fullName>
        <description>Source for Transaction Reconciliation</description>
        <inlineHelpText>Source for Transaction Reconciliation</inlineHelpText>
        <label>Transaction Source</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transfer_Type__c</fullName>
        <label>Transfer Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type_of_Study__c</fullName>
        <description>Type of Study indicating the application&apos;s study type in the context of Exchange/Study Abroad.</description>
        <label>Type of Study</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Study Abroad</fullName>
                </value>
                <value>
                    <fullName>Exchange</fullName>
                </value>
                <value>
                    <fullName>Coursework</fullName>
                </value>
                <value>
                    <fullName>Graduate Research</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Visa_Decision__c</fullName>
        <label>Visa Decision</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Visa_End_Date__c</fullName>
        <description>Capture the Visa validity end date</description>
        <label>Visa End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Visa_Number__c</fullName>
        <description>Capture the visa number</description>
        <label>Visa Number</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visa_Start_Date__c</fullName>
        <description>Capture the Visa validity start date</description>
        <label>Visa Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Visa_Type_Code__c</fullName>
        <description>Capture the visa type code</description>
        <label>Visa Type Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Visa_Type__c</fullName>
        <description>Capture the type of visa</description>
        <label>Visa Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>010</fullName>
                    <label>010 - BRIDGING A THAT APPLY FOR OTHER SUBCLASSES</label>
                </value>
                <value>
                    <fullName>010 ESOS</fullName>
                    <label>010 ESOS - BRIDGING A FOR SUBCLASS 570, 571, 572, 573, 574 OR 575</label>
                </value>
                <value>
                    <fullName>020</fullName>
                    <label>020 - BRIDGING B THAT APPLY FOR OTHER SUBCLASSES</label>
                </value>
                <value>
                    <fullName>020 ESOS</fullName>
                    <label>020 ESOS - BRIDGING B FOR SUBCLASS 570, 571, 572, 573, 574 OR 575</label>
                </value>
                <value>
                    <fullName>030</fullName>
                    <label>030 - BRIDGING C THAT APPLY FOR OTHER SUBCLASSES</label>
                </value>
                <value>
                    <fullName>030 ESOS</fullName>
                    <label>030 ESOS - BRIDGING C FOR SUBCLASS 570, 571, 572, 573, 574 OR 575</label>
                </value>
                <value>
                    <fullName>040</fullName>
                    <label>040 - BRIDGING D (PROSPECTIVE APPLICANT)</label>
                </value>
                <value>
                    <fullName>041</fullName>
                    <label>041 - BRIDGING D (NON APPLICANT)</label>
                </value>
                <value>
                    <fullName>050</fullName>
                    <label>050 - BRIDGING E (GENERAL) THAT APPLY FOR OTHERS SUBCLASSES</label>
                </value>
                <value>
                    <fullName>050 ESOS</fullName>
                    <label>050 ESOS - BRIDGING E FOR SUBCLASS 570, 571, 572, 573, 574 OR 575</label>
                </value>
                <value>
                    <fullName>051</fullName>
                    <label>051 - BRIDGING E (PROTECTION VISA APPLICANT)</label>
                </value>
                <value>
                    <fullName>060</fullName>
                    <label>060 - BRIDGING F</label>
                </value>
                <value>
                    <fullName>070</fullName>
                    <label>070 - BRIDGING (REMOVAL PENDING)</label>
                </value>
                <value>
                    <fullName>121</fullName>
                    <label>121 - EMPLOYER NOMINATION SCHEME</label>
                </value>
                <value>
                    <fullName>132</fullName>
                    <label>132 - BUSINESS TALENT</label>
                </value>
                <value>
                    <fullName>159</fullName>
                    <label>159 - PROVISIONAL RESIDENT RETURN</label>
                </value>
                <value>
                    <fullName>160</fullName>
                    <label>160 - BUSINESS OWNER (PROVISIONAL)</label>
                </value>
                <value>
                    <fullName>161</fullName>
                    <label>161 - SENIOR EXECUTIVE (PROVISIONAL)</label>
                </value>
                <value>
                    <fullName>162</fullName>
                    <label>162 - INVESTOR (PROVISIONAL)</label>
                </value>
                <value>
                    <fullName>163</fullName>
                    <label>163 - STATE/TERRITORY SPONSORED BUSINESS OWNER (PROVISIONAL)</label>
                </value>
                <value>
                    <fullName>164</fullName>
                    <label>164 - STATE/TERRITORY SPONSORED SENIOR EXECUTIVE (PROVISIONAL)</label>
                </value>
                <value>
                    <fullName>165</fullName>
                    <label>165 - STATE/TERRITORY SPONSORED INVESTOR (PROVISIONAL)</label>
                </value>
                <value>
                    <fullName>173</fullName>
                    <label>173 - CONTRIBUTORY PARENT (TEMPORARY)</label>
                </value>
                <value>
                    <fullName>187</fullName>
                    <label>187 - REGIONAL SPONSORED MIGRATION SCHEME VISA</label>
                </value>
                <value>
                    <fullName>188</fullName>
                    <label>188 - BUSINESS INNOVATION AND INVESTMENT (PROVISIONAL)</label>
                </value>
                <value>
                    <fullName>300</fullName>
                    <label>300 - PROSPECTIVE MARRIAGE</label>
                </value>
                <value>
                    <fullName>302</fullName>
                    <label>302 - EMERGENCY (PERMANENT VISA APPLICANT)</label>
                </value>
                <value>
                    <fullName>303</fullName>
                    <label>303 - EMERGENCY (TEMPORARY VISA APPLICANT)</label>
                </value>
                <value>
                    <fullName>309</fullName>
                    <label>309 - SPOUSE</label>
                </value>
                <value>
                    <fullName>310</fullName>
                    <label>310 - INTERDEPENDENCY</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Welcome_Email_Sent__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Welcome Email Sent (MyApp)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>2017</fullName>
                </value>
                <value>
                    <fullName>2018</fullName>
                </value>
                <value>
                    <fullName>2019</fullName>
                </value>
                <value>
                    <fullName>2020</fullName>
                </value>
                <value>
                    <fullName>2021</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>citizenCountryCode__c</fullName>
        <formula>Citizenship_Country__r.Callista_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>citizenCountryCode</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>is_Principal_Course_Transfer__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If the Applicant is transferring within the first six months of his principal course in Australia, this will be checked.</description>
        <inlineHelpText>If the Applicant is transferring within the first six months of his principal course in Australia, this will be checked.</inlineHelpText>
        <label>Principal Course Transfer (&lt;6mth)</label>
        <type>Checkbox</type>
    </fields>
    <label>Application</label>
    <listViews>
        <fullName>APNG_Contact_Merge_Required</fullName>
        <columns>NAME</columns>
        <columns>Applicant_Name__c</columns>
        <columns>Applicants_Email__c</columns>
        <columns>Status__c</columns>
        <columns>AgentName__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Sent_to_student_for_review_Timestamp__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Task_Duplicate_Check__c</columns>
        <columns>Source_System__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Source_System__c</field>
            <operation>equals</operation>
            <value>AgentPortal</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Sent Draft Application to Applicant</value>
        </filters>
        <filters>
            <field>Task_Duplicate_Check__c</field>
            <operation>equals</operation>
            <value>Required</value>
        </filters>
        <label>APNG Contact Merge Required</label>
        <sharedTo>
            <role>SRA_Admissions_Mgr_MC</role>
            <role>SRA_Admissions_Mgr_MU</role>
            <role>SRA_Admissions_Staff_MC</role>
            <role>SRA_Admissions_Staff_MU</role>
            <role>SRA_Admissions_VP</role>
            <roleAndSubordinatesInternal>SRA_Admissions_Dir</roleAndSubordinatesInternal>
            <roleAndSubordinatesInternal>SRA_Admissions_Mgr_MU</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>From_Portal__c</columns>
        <columns>NAME</columns>
        <columns>Citizenship_Type_Filter__c</columns>
        <columns>Task_Duplicate_Check__c</columns>
        <columns>Applicant__c</columns>
        <columns>Callista_Applicant_Id__c</columns>
        <columns>Callista_Application_Id__c</columns>
        <columns>Credit_Intention__c</columns>
        <columns>Fee_Amount__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Welcome_Email_Sent__c</columns>
        <columns>Agent__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Failed Data validation</value>
        </filters>
        <label>All</label>
        <sharedTo>
            <group>Sys_Admin</group>
            <role>Admissions</role>
            <roleAndSubordinates>SRA_Admissions_Staff_MU</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_AVENU_Learning_Applications</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>Callista_Student_Id__c</columns>
        <columns>Applicant__c</columns>
        <columns>Application_ID__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Agent__c</field>
            <operation>equals</operation>
            <value>AVENU Learning</value>
        </filters>
        <label>All - AVENU Learning Applications</label>
    </listViews>
    <listViews>
        <fullName>All_Created_Today</fullName>
        <columns>NAME</columns>
        <columns>Embargoed_Reason__c</columns>
        <columns>Citizenship_Type_Filter__c</columns>
        <columns>Applicant__c</columns>
        <columns>Person_ID__c</columns>
        <columns>Callista_Applicant_Id__c</columns>
        <columns>Callista_Application_Id__c</columns>
        <columns>Submitted_Date__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Agent__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Is_Embargoed__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>All - Embargoed</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Partner_Applications</fullName>
        <columns>LAST_UPDATE</columns>
        <columns>NAME</columns>
        <columns>Callista_Student_Id__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Source_System__c</field>
            <operation>equals</operation>
            <value>Partner</value>
        </filters>
        <label>All - Partner Applications</label>
        <sharedTo>
            <allPartnerUsers></allPartnerUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All_Submitted_this_week_from_APNG</fullName>
        <columns>NAME</columns>
        <columns>Agent__c</columns>
        <columns>Status__c</columns>
        <columns>Applicant__c</columns>
        <columns>Citizenship_Type_Filter__c</columns>
        <columns>Person_ID__c</columns>
        <columns>Callista_Application_Id__c</columns>
        <columns>Submitted_Date__c</columns>
        <columns>Credit_Intention__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Source_System__c</field>
            <operation>equals</operation>
            <value>AgentPortal</value>
        </filters>
        <filters>
            <field>Submitted_Date__c</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <filters>
            <field>CREATEDBY_USER.ALIAS</field>
            <operation>notEqual</operation>
            <value>mapi</value>
        </filters>
        <label>All - Submitted this week from APNG</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>App_Transfer_Error_w_Assessment_Status</fullName>
        <booleanFilter>(1 OR 2) AND 3</booleanFilter>
        <columns>NAME</columns>
        <columns>Applicant__c</columns>
        <columns>Status__c</columns>
        <columns>Source_System__c</columns>
        <columns>Assessment_Status__c</columns>
        <columns>Callista_Applicant_Id__c</columns>
        <columns>Callista_Application_Id__c</columns>
        <columns>Submitted_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Callista_Applicant_Id__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Callista_Application_Id__c</field>
            <operation>equals</operation>
        </filters>
        <filters>
            <field>Assessment_Status__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>App Transfer Error w Assessment Status</label>
        <sharedTo>
            <role>Admissions</role>
            <role>eSolutions</role>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Applicant_Duplicate_Check</fullName>
        <columns>From_Portal__c</columns>
        <columns>NAME</columns>
        <columns>Citizenship_Type_Filter__c</columns>
        <columns>Task_Duplicate_Check__c</columns>
        <columns>Applicant__c</columns>
        <columns>Callista_Applicant_Id__c</columns>
        <columns>Callista_Application_Id__c</columns>
        <columns>Credit_Intention__c</columns>
        <columns>Fee_Amount__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Welcome_Email_Sent__c</columns>
        <columns>Agent__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Submission on Hold (Duplicate Contact)</value>
        </filters>
        <label>Applicant Duplicate Check</label>
    </listViews>
    <listViews>
        <fullName>Apps_on_hold_for_dup_chk_Ellen_s_list</fullName>
        <columns>From_Portal__c</columns>
        <columns>NAME</columns>
        <columns>Applicant__c</columns>
        <columns>Source_System__c</columns>
        <columns>Type_of_Study__c</columns>
        <columns>Campus_Location__c</columns>
        <columns>Status__c</columns>
        <columns>AgentName__c</columns>
        <columns>Submitted_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Task_Duplicate_Check__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Submission on Hold (Duplicate Contact)</value>
        </filters>
        <label>Apps on hold for dup chk - Ellen&apos;s list</label>
        <sharedTo>
            <roleAndSubordinatesInternal>SRA_Admissions_Mgr_MU</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Draft_Applications1</fullName>
        <columns>NAME</columns>
        <columns>Applicant__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Callista_Applicant_Id__c</columns>
        <columns>Callista_Application_Id__c</columns>
        <columns>Submitted_Date__c</columns>
        <columns>Submission_Progress__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Draft</value>
        </filters>
        <filters>
            <field>Submission_Progress__c</field>
            <operation>equals</operation>
            <value>Declaration</value>
        </filters>
        <label>Draft Applications</label>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Draft_Partner_Applications</fullName>
        <columns>Partner_Controlled__c</columns>
        <columns>NAME</columns>
        <columns>Applicant_Name__c</columns>
        <columns>Callista_Student_Id__c</columns>
        <columns>Application_ID__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Draft</value>
        </filters>
        <label>Draft - Partner Applications</label>
        <sharedTo>
            <allPartnerUsers></allPartnerUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IDP_Applications</fullName>
        <columns>From_Portal__c</columns>
        <columns>NAME</columns>
        <columns>Citizenship_Type_Filter__c</columns>
        <columns>Task_Duplicate_Check__c</columns>
        <columns>Applicant__c</columns>
        <columns>Callista_Applicant_Id__c</columns>
        <columns>Callista_Application_Id__c</columns>
        <columns>Credit_Intention__c</columns>
        <columns>Fee_Amount__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Welcome_Email_Sent__c</columns>
        <columns>Agent__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Source_System__c</field>
            <operation>contains</operation>
            <value>IDP</value>
        </filters>
        <label>IDP Applications</label>
    </listViews>
    <listViews>
        <fullName>MUM_All_Submitted_this_week_from_my_app</fullName>
        <columns>From_Portal__c</columns>
        <columns>NAME</columns>
        <columns>Citizenship_Type_Filter__c</columns>
        <columns>Applicant__c</columns>
        <columns>Callista_Applicant_Id__c</columns>
        <columns>Callista_Application_Id__c</columns>
        <columns>Submitted_Date__c</columns>
        <columns>Credit_Intention__c</columns>
        <columns>Fee_Amount__c</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Welcome_Email_Sent__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>From_Portal__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>Submitted_Date__c</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:7</value>
        </filters>
        <filters>
            <field>Campus_Location__c</field>
            <operation>equals</operation>
            <value>Malaysia</value>
        </filters>
        <label>MUM - All Submitted this week from MyApp</label>
        <sharedTo>
            <roleAndSubordinatesInternal>SRA_Admissions_Mgr_MU</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MUM_Applications_on_hold_for_dup_check</fullName>
        <columns>From_Portal__c</columns>
        <columns>NAME</columns>
        <columns>Applicant__c</columns>
        <columns>Source_System__c</columns>
        <columns>Status__c</columns>
        <columns>Task_Duplicate_Check__c</columns>
        <columns>Submitted_Date__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Welcome_Email_Sent__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Submission on Hold (Duplicate Contact)</value>
        </filters>
        <filters>
            <field>Campus_Location__c</field>
            <operation>equals</operation>
            <value>Malaysia</value>
        </filters>
        <label>MUM - Applications on hold for dup check</label>
        <sharedTo>
            <roleAndSubordinatesInternal>SRA_Admissions_Mgr_MU</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MUM_Draft_Applications</fullName>
        <columns>NAME</columns>
        <columns>Applicant__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Callista_Applicant_Id__c</columns>
        <columns>Callista_Application_Id__c</columns>
        <columns>Submitted_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Draft</value>
        </filters>
        <filters>
            <field>Campus_Location__c</field>
            <operation>equals</operation>
            <value>Malaysia</value>
        </filters>
        <label>MUM - Draft Applications</label>
        <sharedTo>
            <roleAndSubordinatesInternal>SRA_Admissions_Mgr_MU</roleAndSubordinatesInternal>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>A-{0000000}</displayFormat>
        <label>Reference Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Applications</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>Block_Approved_Status_By_Portal_User</fullName>
        <active>true</active>
        <description>Prevent portal users from updating of Status field to Approved</description>
        <errorConditionFormula>AND(
  ISCHANGED(Status__c),
  ISPICKVAL(Status__c, &apos;Approved&apos;),
  ISPICKVAL($User.UserType, &apos;CspLitePortal&apos;)
)</errorConditionFormula>
        <errorDisplayField>Status__c</errorDisplayField>
        <errorMessage>Requested update on status field not permitted</errorMessage>
    </validationRules>
</CustomObject>